Updates site metadata, analytics, and WhatsApp link

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
   <meta property="og:image" content="%PUBLIC_URL%/assets/og-image.jpg" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="es_CO" />
-  <meta property="og:url" content="https://TU_DOMINIO.com" />
+  <meta property="og:url" content="https://ascensoreshho.web.app" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
@@ -48,13 +48,13 @@
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-    gtag('config', 'G-28YPXFH4HZ');
+    gtag('config', 'G-G2WL81CCKZ');
   </script>
 
   <!-- SEO: Datos estructurados JSON-LD -->
   <script type="application/ld+json">
   {
-    "@context": "https://schema.org",
+    "@context": "https://ascensoreshho.web.app,
     "@type": "LocalBusiness",
     "name": "HHO Ascensores y Malacates",
     "description": "Fabricación, instalación y mantenimiento de ascensores, montacargas y malacates personalizados.",
@@ -66,7 +66,7 @@
     },
     "telephone": "+57 321 7639431",
     "image": "%PUBLIC_URL%/assets/og-image.jpg",
-    "url": "https://TU_DOMINIO.com",
+    "url": "https://ascensoreshho.web.app",
     "serviceArea": {
       "@type": "Place",
       "name": "Colombia"
