Updates Google Analytics tracking ID

--- a/public/index.html
+++ b/public/index.html
@@ -43,12 +43,12 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <!-- GOOGLE ANALYTICS -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-28YPXFH4HZ"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0LG93ZFP56"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-    gtag('config', 'G-G2WL81CCKZ');
+    gtag('config', 'G-0LG93ZFP56');
   </script>
 
   <!-- SEO: Datos estructurados JSON-LD -->
